--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
     "@angular/core": "^2.4.0",
+    "@angular/flex-layout": "^2.0.0-rc.1",
     "@angular/forms": "^2.4.0",
     "@angular/http": "^2.4.0",
     "@angular/material": "^2.0.0-beta.2",
@@ -43,7 +44,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
+    "tslint": "^5.0.0",
     "typescript": "~2.0.0"
   }
 }
