--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
     "@angular/flex-layout": "^2.0.0-rc.1",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
     "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -29,8 +31,8 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.0",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -45,6 +47,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "^5.0.0",
-    "typescript": "~2.0.0"
+    "typescript": "^2.2.2"
   }
 }
