adding production env;

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "angular-tour-of-heroes-46799"
+    "default": "angular-tour-of-heroes-46799",
+    "production": "angular-tour-of-heroes-46799"
   }
 }
