--- a/circle.yml
+++ b/circle.yml
@@ -25,4 +25,4 @@ deployment:
     branch: master
     commands:
       - yarn run build
-      - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
+      - firebase deploy --token "$FIREBASE_TOKEN" --non-interactive
