ugh installing firebase tools

--- a/circle.yml
+++ b/circle.yml
@@ -25,4 +25,5 @@ deployment:
     branch: master
     commands:
       - yarn run build
+      - npm install -g firebase-tools
       - firebase deploy --token "$FIREBASE_TOKEN"
