--- a/circle.yml
+++ b/circle.yml
@@ -26,4 +26,5 @@ deployment:
     commands:
       - yarn run build
       - npm install -g firebase-tools
+      - firebase use production
       - firebase deploy --token "$FIREBASE_TOKEN"
