--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^4.0.1",
     "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
+    "firebase-functions": "^0.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
