--- a/circle.yml
+++ b/circle.yml
@@ -26,5 +26,6 @@ deployment:
     commands:
       - yarn run build
       - npm install -g firebase-tools
+      - cd ./functions && npm install && cd ..
       - firebase use production
       - firebase deploy --token "$FIREBASE_TOKEN"
