--- a/circle.yml
+++ b/circle.yml
@@ -21,8 +21,16 @@ test:
           JUNIT_REPORT_NAME: test-results.xml
     - yarn run e2e
 deployment:
-  production:
+  staging:
     branch: master
+    commands:
+      - yarn run build
+      - npm install -g firebase-tools
+      - cd ./functions && npm install && cd ..
+      - firebase use staging
+      - firebase deploy --token "$FIREBASE_TOKEN"
+  production:
+    tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - yarn run build
       - npm install -g firebase-tools
