--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "container:build:prod": "yarn run build && docker build -t $npm_package_docker_repo:v$npm_package_version -t $npm_package_docker_repo:latest .",
     "container:build": "docker build -f Dockerfile.dev -t $npm_package_docker_repo:dev .",
     "container:run:prod": "docker run -p 80:80 -d $npm_package_docker_repo:$npm_package_version",
-    "container:run": "docker run -p 4200:4200 -d $npm_package_docker_repo:dev"
+    "container:run": "docker run -p 4200:4200 -d $npm_package_docker_repo:dev",
+    "postversion": "git push && git push --tags"
   },
   "private": true,
   "dependencies": {
