--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
+    "karma-webdriver-launcher": "^1.0.5",
     "protractor": "~5.1.0",
     "ts-node": "^3.0.2",
     "tslint": "4.5.1",
