--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           path: ~/app/coverage
       - run:
           name: Run e2e Tests
-          command: yarn run e2e -- --config config/protractor.ci.conf.js
+          command: yarn run e2e -- --config config/protractor.ci.conf.js --webdriver-update false
       - deploy:
           name: Deploy
           command: |
