adding e2e test to results

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^7.0.12",
     "codelyzer": "^3.0.0-beta.4",
     "jasmine-core": "~2.5.2",
+    "jasmine-reporters": "^2.2.1",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "~2.0.0",
