--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "http-server dist/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --type-check",
@@ -16,7 +16,9 @@
     "container:build": "docker build -f Dockerfile.dev -t $npm_package_docker_repo:dev .",
     "container:run:prod": "docker run -p 80:80 -d $npm_package_docker_repo:$npm_package_version",
     "container:run": "docker run -p 4200:4200 -d $npm_package_docker_repo:dev",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "preinstall": "npm install -g http-server",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
