--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/platform-server": "^4.0.1",
     "@angular/router": "^4.0.1",
+    "angular-cli": "^1.0.0-beta.28.3",
     "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
     "firebase-functions": "^0.5.4",
